@@ -1,10 +1,0 @@
-<input type="submit"
-       id="{{context.id}}" name="{{context.name}}" value="{{context.value}}"
-       {{{'class': context.klass,
-          'lang': context.lang,
-          'title': context.title,
-          'disable': context.disabled,
-          'tabindex': context.tabindex,
-          'readonly': context.readonly,
-          'alt': context.alt,
-          'accesskey': context.accesskey}|xmlattr}}>
